<resources>
    <string name="steem">STEEM</string>
    <string name="steem_dollars">STEEM DOLLARS</string>
    <string name="savings">SAVINGS</string>
    <string name="app_name">Mixion</string>
    <string name="feed">Feed</string>
    <string name="feed_back">Feedback</string>
    <string name="sort_by">Sort By</string>
    <string name="github">Github</string>
    <string name="donate">Donate</string>
    <string name="bookmark">Bookmarks</string>
    <string name="home">Home</string>
    <string name="sort">Sort</string>
    <string name="profile">Profile</string>
    <string name="asksteem">AskSteem</string>
    <string name="chat">Chat</string>
    <string name="search_hint">Search</string>
    <string name="filter_by">Filter</string>
    <string name="account">Account</string>
    <string name="filter_new">New</string>
    <string name="filter_hot">Hot</string>
    <string name="filter_trending">Trending</string>
    <string name="filter_promoted">Promoted</string>
    <string name="myFeed">My Feed</string>
    <string name="quick_links">Quick Links</string>
    <string name="d_tube">dTube</string>
    <string name="d_mania">dMania</string>
    <string name="browse_tags">Browse By Tags</string>
    <string name="tags">Tags</string>
    <string name="resteem">Re-Steem</string>
    <string name="no_comments">No Comments</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="drafts">Drafts</string>
    <string name="upvotes">Upvotes</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="replies">Replies</string>
    <string name="login_username_hint">Username</string>
    <string name="posting_key">Posting Key</string>
    <string name="login">Login</string>
    <string name="login_title">Log in to Steemit</string>
    <string name="logout">Log out</string>
    <string name="title">Title</string>
    <string name="post">Post</string>
    <string name="preview">Preview</string>
    <string name="chip_action">Chip Action</string>
    <string name="add_tags">Add tags</string>
    <string name="enter_tag">Enter Tag</string>
    <string name="enter_comment">enter comment....</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="scan_qr">Scan QR Code</string>
    <string name="ok">OK</string>
    <string name="no_mentions">You aren\'t mentioned anywhere</string>
    <string name="submitting_comment">Submitting Comment</string>
    <string name="something_wrong">Something went wrong</string>
    <string name="blank_title_error">Title cannot be blank</string>
    <string name="blank_body_error">Discussion Body cannot be blank</string>
    <string name="no_tags_error">Enter at least 1 tag</string>
    <string name="submitting_post">Submitting Post, Please wait....</string>
    <string name="storing_key_error">Unable to securely store key, Make sure your device is secured with PIN/password or pattern</string>
    <string name="invalid_posting_key">Invalid Posting Key</string>
    <string name="permissions_not_granted">Permissions were not granted.</string>
    <string name="permission_camera_rationale">Camera permission is needed to scan QR code.</string>
    <string name="wrong_qr_code_explanation">Wrong QR Code, Click on the QR code to expand the correct QR code</string>
    <string name="steemit_qrcode_instructions_title">Steemit QR Code Instructions</string>
    <string name="delete_draft">Delete This Draft?</string>
    <string name="donation">Support the development of Mixion by buying the developer a cup of coffee :)</string>
    <string name="donate_bitcoin">Send Bitcoin</string>
    <string name="only_bitcoin">Only send Bitcoin (BTC) to this address</string>
    <string name="copy_bitcoin_address">Copy BTC address</string>
    <string name="donate_ether">Send Ether</string>
    <string name="only_ether">Only send Ether (ETH) to this address</string>
    <string name="copy_ether_address">Copy ETH address</string>
    <string name="address_saved">Address Saved to Clipboard</string>
    <string name="steemit_qrcode_instructions">Go to your Steemit.com account
        \n 1. Click on "wallet"
        \n 2. Click on "Permissions"
        \n 3. Click on "show private key" next to POSTING
        \n 4. Click on the small QR code icon
        \n 5. Point the camera at the expanded QR code, your key will be automatically captured</string>
    
    <string name="steem_description">Tradeable tokens that may be transferred anywhere at anytime.
        Steem can be converted to STEEM POWER in a process called powering up.</string>

    <string name="steem_dollars_description">Tokens worth about $1.00 of STEEM, currently collecting 0% APR.</string>

    <string name="savings_description">Balance subject to 3 day withdraw waiting period,STEEM DOLLARS currently collecting 0% APR.</string>
    <string name="publish">publish</string>
    <plurals name="follower_count">
        <item quantity="zero">no followers</item>
        <item quantity="one">%s follower</item>
        <item quantity="other">%s followers</item>
    </plurals>
    <plurals name="following_count">
        <item quantity="zero">following nobody</item>
        <item quantity="other">%s following</item>
    </plurals>
    <plurals name="post_count">
        <item quantity="zero">no posts</item>
        <item quantity="one">%s post</item>
        <item quantity="other">%s posts</item>
    </plurals>
    <string-array name="sort_search">
        <item>Newest</item>
        <item>Oldest</item>
        <item>Most Comments</item>
        <item>Most Votes</item>
    </string-array>
</resources>
